@@ -19,6 +19,13 @@ is preserved for the udev version started in the rootfs.
 The command 'udevadm info --convert-db' is gone. The udev daemon
 itself, at startup, converts any old database version if necessary.
 
+The systemd services files have been reorganized. The udev control
+socket is bound by systemd and passed to the started udev daemon.
+The udev-settle.service is no longer active by default. Services which
+can not handle hotplug setups properly need to actively pull it in to
+act like a barrier for basic.target. Alternatively the settle service
+can be unconditionally 'systemctl'enabled to work-around such services.
+
 The fstab_import callout is no longer built or installed. Udev
 should not be used to mount, does not watch changes to fstab, and
 should not mirror fstab values in the udev database.
